# TalkShop

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  pytest.ini  render.yaml  requirements.txt  you_agent.py
.claude/: settings.local.json
docs/: render.md
docs/examples/: nike_links.json  sentiment_query_example.json  usr_3f9d7e2c.json  usr_7b2a8f3e.json  usr_8a3f2b1c.json  usr_9c4d5e2f.json
scripts/: crawled_products.json  nike_test_results.json  product_crawler.py  render_build_test.sh  supabase.sh
services/: __init__.py  scraper_service.py  search_service.py
src/: __init__.py
src/api/: database.py  main.py  models.py  run.py
src/api/tests/: conftest.py  run_tests.py  test_core_endpoints.py  test_general_interactions.py  test_product_search.py  test_sentiment_by_attributes.py  test_web_search.py
supabase/: config.toml  seed.sql
supabase/migrations/: 20260206120000_create_user_profiles.sql  20260206120100_seed_user_profiles.sql  20260206120200_create_products.sql  20260206120300_create_user_product_interactions.sql  20260206120400_seed_products.sql  20260206120500_seed_user_product_interactions.sql
